[package]
name = "ferrum-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
ferrum-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
metrics = { workspace = true }

# Async utilities
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
pin-project = "1.1"

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
bytesize = "1.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []
profiling = []  # Enable detailed profiling
cuda = []       # CUDA runtime support
rocm = []       # ROCm runtime support
metal = []      # Metal runtime support
