[package]
name = "ferrum-sampler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sampling strategies for Ferrum LLM inference engine"
readme = "../../README.md"

[dependencies]
# Core dependencies - New architecture
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

# Concurrency
parking_lot = { workspace = true }

# Math and random
rand = { workspace = true }
rand_distr = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
once_cell = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Regex DFA for guided decoding (vocab-aware token masking)
regex-automata = { version = "0.4", default-features = false, features = ["std", "syntax", "dfa-build", "dfa-search"] }

[dev-dependencies]
tokio-test = "0.4"
