[package]
name = "ferrum-testkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Testing utilities for Ferrum LLM inference engine"
readme = "../../README.md"

[dependencies]
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }
ferrum-kv = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
