[package]
name = "ferrum-testkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Testing utilities for Ferrum LLM inference engine"
readme = "../../README.md"

[dependencies]
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }
ferrum-kv = { workspace = true }
# Op-diff harness imports concrete backends; pure ops only — no kernel
# feature flags pulled into this crate's default build.
ferrum-kernels = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
# Forwards to ferrum-kernels/metal so op-diff can include the Metal
# backend in cross-backend NMSE comparisons.
metal = ["ferrum-kernels/metal"]
# Forwards to ferrum-kernels/cuda for the same reason on CUDA hosts.
cuda = ["ferrum-kernels/cuda"]
